--- a/CodeWalletWidget/Base.lproj/MainInterface.storyboard
+++ b/CodeWalletWidget/Base.lproj/MainInterface.storyboard
@@ -18,31 +18,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pJ8-CT-iI1">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pJ8-CT-iI1">
                                 <rect key="frame" x="10" y="0.0" width="300" height="110"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="F8F-gH-wYa">
-                                    <size key="itemSize" width="70" height="110"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="F8F-gH-wYa">
+                                    <size key="itemSize" width="85" height="110"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CodeCollectionViewCell" id="0Jb-da-lrU" customClass="CodeCollectionViewCell" customModule="CodeWalletWidget" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="70" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="85" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="70" height="110"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="85" height="110"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qds-DI-3Dw">
-                                                    <rect key="frame" x="10" y="20" width="50" height="50"/>
+                                                    <rect key="frame" x="7" y="10" width="70" height="70"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="HK6-sw-uTA">
-                                                    <rect key="frame" x="0.0" y="76" width="70" height="21"/>
+                                                    <rect key="frame" x="0.0" y="80" width="85" height="24"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -55,30 +55,45 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bjq-av-cRU">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5jg-Z2-pxi">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A1I-yM-IHJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="110"/>
-                                        <state key="normal" title="&lt;">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                    </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5jg-Z2-pxi">
-                                        <rect key="frame" x="50" y="0.0" width="270" height="110"/>
-                                    </imageView>
-                                </subviews>
-                            </stackView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hjy-Cp-maG">
+                                <rect key="frame" x="70" y="0.0" width="250" height="26"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A1I-yM-IHJ">
+                                <rect key="frame" x="0.0" y="0.0" width="70" height="110"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="zNM-sv-q8Y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
+                                <state key="normal" title="←">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstItem="pJ8-CT-iI1" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="10" id="2pT-DV-5fE"/>
+                            <constraint firstItem="A1I-yM-IHJ" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" id="5Ty-Fl-FLx"/>
+                            <constraint firstItem="5jg-Z2-pxi" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" id="9W5-Tq-lFt"/>
+                            <constraint firstItem="Hjy-Cp-maG" firstAttribute="trailing" secondItem="ssy-KU-ocm" secondAttribute="trailing" id="A9W-1C-tff"/>
                             <constraint firstItem="pJ8-CT-iI1" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" id="JUd-G5-yLK"/>
-                            <constraint firstItem="Bjq-av-cRU" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" id="UiY-Er-rwg"/>
-                            <constraint firstItem="Bjq-av-cRU" firstAttribute="bottom" secondItem="ssy-KU-ocm" secondAttribute="bottom" id="Yuc-cu-8Q2"/>
+                            <constraint firstItem="Hjy-Cp-maG" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" id="JsJ-ly-omk"/>
+                            <constraint firstItem="Hjy-Cp-maG" firstAttribute="trailing" secondItem="ssy-KU-ocm" secondAttribute="trailing" id="Omq-Ed-HhY"/>
                             <constraint firstItem="pJ8-CT-iI1" firstAttribute="trailing" secondItem="ssy-KU-ocm" secondAttribute="trailing" constant="-10" id="ZPT-aV-dVg"/>
+                            <constraint firstItem="Hjy-Cp-maG" firstAttribute="leading" secondItem="A1I-yM-IHJ" secondAttribute="trailing" id="d81-ge-4P3"/>
                             <constraint firstItem="pJ8-CT-iI1" firstAttribute="bottom" secondItem="ssy-KU-ocm" secondAttribute="bottom" id="kxZ-NI-jO9"/>
-                            <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="Bjq-av-cRU" secondAttribute="trailing" id="wPa-vy-DbB"/>
-                            <constraint firstItem="Bjq-av-cRU" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" id="z6Z-7z-ToN"/>
+                            <constraint firstItem="5jg-Z2-pxi" firstAttribute="trailing" secondItem="ssy-KU-ocm" secondAttribute="trailing" id="pYz-Ih-JmX"/>
+                            <constraint firstItem="5jg-Z2-pxi" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" id="urt-EM-x21"/>
+                            <constraint firstItem="A1I-yM-IHJ" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" id="voa-nc-E6C"/>
+                            <constraint firstItem="5jg-Z2-pxi" firstAttribute="bottom" secondItem="ssy-KU-ocm" secondAttribute="bottom" id="xVd-t5-ply"/>
+                            <constraint firstItem="A1I-yM-IHJ" firstAttribute="bottom" secondItem="ssy-KU-ocm" secondAttribute="bottom" id="xze-Ka-CjG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ssy-KU-ocm"/>
                     </view>
@@ -88,7 +103,7 @@
                     <connections>
                         <outlet property="barcodeBackButton" destination="A1I-yM-IHJ" id="PO0-EK-XKg"/>
                         <outlet property="barcodeImageView" destination="5jg-Z2-pxi" id="i0A-gJ-jfo"/>
-                        <outlet property="barcodeStackView" destination="Bjq-av-cRU" id="iq6-Ru-j72"/>
+                        <outlet property="barcodeTitleLabel" destination="Hjy-Cp-maG" id="R76-cy-LJU"/>
                         <outlet property="collectionView" destination="pJ8-CT-iI1" id="wKH-Bo-tv9"/>
                     </connections>
                 </viewController>
